# TonyPi-Socket

./: .gitignore  README.md  pcv5.py  pcv8-local.py  pcv8.py  pyproject.toml  robot-local.py  robot.py  yolov5.ipynb  yolov8.ipynb
